fix logo z-index

--- a/src/styles/modules/_masthead.scss
+++ b/src/styles/modules/_masthead.scss
@@ -53,7 +53,7 @@
   position: absolute;
   left: 40px;
   top: 20px;
-  z-index: 1;
+  z-index: 4;
 
   img {
     height: 38px;
